Lockin glass added